Refactored all AST node classes